--- a/server/src/main/webapp/css/wix_new.css
+++ b/server/src/main/webapp/css/wix_new.css
@@ -1,12 +1,34 @@
 @CHARSET "ISO-8859-1";
 
+html {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
 body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+/* START - DIV related Styles */
+div.UCMapCanvas {
+	width: 100%;
+	height: 90%;
+}
+
+div.UCPageHeader {
 	
 }
 
-/* DIV for the main Map Canvas */
-div.map-canvas {
-	width: 90%;
-	height: 80%;
-	
+div.UCPageFooter {
+	bottom:0;
+    position:fixed;
+    z-index:100;
+
+    width:100%;
+    height:10%;	
 }
+
+/* END - DIV related Styles */
